--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<nav><p>FILTRA PER TIPO</p>
   <select id="lista">
   <option value="All">All</option>
-  <option value="vegetable">animal</option>
+  <option value="animal">animal</option>
   <option value="vegetable">vegetable</option>
   <option value="user">user</option>
   </select>
